--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,9 @@
                         <a href="controller.php?action=6">Cart</a>
                     </td>
                     <td>
+                        <a href="/register">Register</a>
+                    </td>
+                    <td>
                         <a href="/login">Sign-in</a>
                     </td>
                 </tr>
